--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="sensor_gyroscope">Gyroscope</string>
     <string name="sensor_temperature">Temperature</string>
     <string name="sensor_gps">GPS Location</string>
+    <string name="sensor_accelerometer">Accelerometer</string>
+    <string name="sensor_magnetometer">Magnetometer</string>
+    <string name="sensor_light">Light Sensor</string>
+    <string name="sensor_humidity">Humidity</string>
     
     <string name="unit_pressure">hPa</string>
     <string name="unit_rotation">rad/s</string>
@@ -27,4 +31,8 @@
     <string name="settings_show_gyroscope">Show Gyroscope</string>
     <string name="settings_show_temperature">Show Temperature</string>
     <string name="settings_show_gps">Show GPS Location</string>
+    <string name="settings_show_accelerometer">Show Accelerometer</string>
+    <string name="settings_show_magnetometer">Show Magnetometer</string>
+    <string name="settings_show_light">Show Light Sensor</string>
+    <string name="settings_show_humidity">Show Humidity</string>
 </resources>
