feat: Implement comprehensive sensor display system with customizable widgets
✨ New Features:
• Four sensor widgets: Barometer, Gyroscope, Temperature, GPS Location
• Real-time sensor data updates via Kotlin Flow
• Individual widget show/hide controls in Settings
• Responsive grid layout (2 cols portrait, 3 cols landscape)
• Runtime location permission handling for GPS sensor

🏗️ Architecture:
• Repository pattern with BaseSensorRepository interface
• SensorResult sealed class for unified state management
• SensorVisibilityPreferences for persistent settings
• Custom SensorCardView component with Material Design
• Lifecycle-aware coroutine subscriptions

📱 UI Components:
• Updated navigation: Sensors (Home) and Settings tabs
• Material Card-based sensor widgets with icons
• Empty state when no sensors are enabled
• Error handling for unavailable sensors
• Permission dialogs and rationale for GPS

🧪 Technical Implementation:
• SharedPreferences with reactive Flow updates
• Google Play Services location integration
• Proper sensor listener lifecycle management
• Unit tests with MockK for preferences
• Comprehensive documentation in README

📦 Dependencies Added:
• Google Play Services Location for GPS
• MockK and Coroutines Test for testing

This implementation provides a solid foundation for displaying real-time
sensor data with full user customization capabilities.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="title_home">Home</string>
     <string name="title_sensors">Sensors</string>
     <string name="title_dashboard">Dashboard</string>
+    <string name="title_map">Map</string>
     <string name="title_settings">Settings</string>
     
     <!-- Sensor related strings -->
@@ -35,4 +36,12 @@
     <string name="settings_show_magnetometer">Show Magnetometer</string>
     <string name="settings_show_light">Show Light Sensor</string>
     <string name="settings_show_humidity">Show Humidity</string>
+    
+    <!-- Map strings -->
+    <string name="map_loading">Loading map...</string>
+    <string name="map_location_not_available">Location not available</string>
+    <string name="map_my_location">My Location</string>
+    
+    <!-- Google Maps API Key - Replace with your actual API key -->
+    <string name="google_maps_key">YOUR_API_KEY_HERE</string>
 </resources>
