--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,5 @@
     <string name="map_my_location">My Location</string>
     
     <!-- Google Maps API Key - Replace with your actual API key -->
-    <string name="google_maps_key">YOUR_API_KEY_HERE</string>
+    <string name="google_maps_key">DUMMY_API_KEY</string>
 </resources>
