Add OpenStreetMap (osmdroid) alongside Google Maps with provider toggle and persisted preference (default OSM).\n\n- Add osmdroid dependency\n- Add OSM MapView and on-screen provider toggle\n- Persist provider via MapPreferences and expose in Settings\n- Lazily create GoogleMap fragment only when selected\n- Fix Material3 style usage to Material Components to avoid inflation crash\n- Add default fallback location for emulator (San Francisco)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,11 +36,16 @@
     <string name="settings_show_magnetometer">Show Magnetometer</string>
     <string name="settings_show_light">Show Light Sensor</string>
     <string name="settings_show_humidity">Show Humidity</string>
+    <string name="settings_map_provider">Map Provider</string>
+    <string name="settings_map_provider_description">Choose the default map provider</string>
     
     <!-- Map strings -->
     <string name="map_loading">Loading map...</string>
     <string name="map_location_not_available">Location not available</string>
     <string name="map_my_location">My Location</string>
+    <string name="map_default_location">Default Location</string>
+    <string name="map_provider_google">Google</string>
+    <string name="map_provider_osm">OSM</string>
     
     <!-- Google Maps API Key - Replace with your actual API key -->
     <string name="google_maps_key">DUMMY_API_KEY</string>
