Map zoom improvements and settings\n\n- Enable pinch-zoom gestures on Google Map\n- Enable built-in zoom controls on OSM\n- Default zoom level set to 9\n- Preserve user zoom after first center (pan on updates)\n- Add Settings slider to configure default zoom (3–20)\n- Wire MapFragment to use persisted zoom preference

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,9 @@
     <string name="settings_show_humidity">Show Humidity</string>
     <string name="settings_map_provider">Map Provider</string>
     <string name="settings_map_provider_description">Choose the default map provider</string>
+    <string name="settings_map_zoom">Default Map Zoom</string>
+    <string name="settings_map_zoom_value">Zoom: %1$d</string>
+    <string name="settings_map_zoom_value_placeholder">Zoom: -</string>
     
     <!-- Map strings -->
     <string name="map_loading">Loading map...</string>
