--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,9 @@
     <string name="map_default_location">Default Location</string>
     <string name="map_provider_google">Google</string>
     <string name="map_provider_osm">OSM</string>
+    <string name="map_search_hint">Search location</string>
+    <string name="map_search_no_results">No results found</string>
+    <string name="map_search_error">Search failed. Check connection.</string>
     
     <!-- Google Maps API Key - Replace with your actual API key -->
     <string name="google_maps_key">DUMMY_API_KEY</string>
