feat: Implement weather search functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,8 @@
     <string name="weather_error">Failed to load weather</string>
     <string name="weather_refresh">Refresh</string>
     <string name="weather_retry">Try Again</string>
+    <string name="weather_search_hint">Search city</string>
+    <string name="weather_search">Search</string>
     <string name="weather_last_updated">Last updated: %1$s</string>
     <string name="weather_feels_like">Feels like</string>
     <string name="weather_humidity">Humidity</string>
