--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="title_map">Map</string>
     <string name="title_weather">Weather</string>
     <string name="title_settings">Settings</string>
+    <string name="title_constellation">Constellations</string>
     
     <!-- Sensor related strings -->
     <string name="sensor_barometer">Barometer</string>
